--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,6 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "react/display-name": "off"
+        "react/react-in-jsx-scope": "off"
     }
 }
