--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "addictiondetectionsystem",
+  "name": "addictionmeter",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -7,8 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "lint": "eslint . --ext .js"
+    "eject": "expo eject"
   },
   "dependencies": {
     "expo": "~44.0.0",
