change icon and splash app

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "AddictionMeter",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/am-icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/am-splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#C9C9C9"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,13 +22,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/am-icon.png",
+        "backgroundColor": "#C9C9C9"
       },
       "package": "com.tridenda.AddictionMeter"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/am-icon.png"
     }
   }
 }
